--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
           <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
-              <a href="#" class="hidden-xs hidden-sm hidden-md hidden-lg">
+              <a href="#" class="hidden-sm hidden-md hidden-lg">
                 Chicken
               </a>
             </li>
             <li>
-              <a href="#" class="hidden-xs hidden-sm hidden-md hidden-lg">
+              <a href="#" class="hidden-sm hidden-md hidden-lg">
                 Beef
               </a>
             </li>
             <li>
-              <a href="#" class="hidden-xs hidden-sm hidden-md hidden-lg">
+              <a href="#" class="hidden-sm hidden-md hidden-lg">
                 Sushi
               </a>
             </li>
